fixed colour contrast

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -142,7 +142,7 @@
 					.cta {
 						--button_border: #{var.$pink};
 						--button_background: #{var.$pink};
-						--button_text: #{var.$white};
+						--button_text: #{var.$neutral};
 					}
 				}
 			}
